Refactored expected student file views to use new base classes and schema gen.
